P01/Tests/SyntaxErrors/duptrans2.tm
states 3
$
% +
^ -
alphabet 2 $ &
$ $ $ $ L
$ $ % & R
